Began working on part 2. Add media query for top nav menu.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <a href="#" class="title">chirpus inc.</a>
-        <a href="#">Work</a>
-        <a href="#">About Us</a>
-        <a href="#">Contact</a>
+        <a href="#" class="menu">Work</a>
+        <a href="#" class="menu">About Us</a>
+        <a href="#" class="menu">Contact</a>
     </nav>
     <button>Hire Us</button>
     <h1>chirpus inc.</h1>
