Correctly ormatted the h1 position for wide screen. Still need to fix Hire Us button position on wide screen. Also changed color of p left border to gray not black.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <a href="#" class="menu">About Us</a>
         <a href="#" class="menu">Contact</a>
     </nav>
-    <button>Hire Us</button>
+    <button class="hire">Hire Us</button>
     <h1>chirpus inc.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, earum doloremque qui rerum, ad animi ipsum eaque quibusdam, atque repellendus? Quos corrupti sed sapiente quibusdam. Similique quas assumenda sint!</p>
-    <button>Scroll Down</button>
+    <button class="scroll">Scroll Down</button>
 </body>
 </html>
