--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="title">chirpus inc.</a>
-        <a href="#" class="menu">Work</a>
-        <a href="#" class="menu">About Us</a>
-        <a href="#" class="menu">Contact</a>
+        <ul>
+            <li><a href="#" class="title">chirpus inc.</a></li>
+            <li><a href="#" class="menu">Work</a></li>
+            <li><a href="#" class="menu">About Us</a></li>
+            <li><a href="#" class="menu">Contact</a></li>
+        </ul>
     </nav>
     <button class="hire">Hire Us</button>
     <h1>chirpus inc.</h1>
