added a header container for flex properties to work with the media query. Still not quite right but closer.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     <title>Chirpus Inc.</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#" class="title">chirpus inc.</a></li>
-            <li><a href="#" class="menu">Work</a></li>
-            <li><a href="#" class="menu">About Us</a></li>
-            <li><a href="#" class="menu">Contact</a></li>
-        </ul>
-    </nav>
-    <button class="hire">Hire Us</button>
-    <h1>chirpus inc.</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, earum doloremque qui rerum, ad animi ipsum eaque quibusdam, atque repellendus? Quos corrupti sed sapiente quibusdam. Similique quas assumenda sint!</p>
-    <button class="scroll">Scroll Down</button>
+    <header>
+        <span id="title">chirpus inc.</span>
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Work</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hire">
+            <button>Hire Us</button>
+        </div>
+    </header>
+    <div>
+        <h1>chirpus inc.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, earum doloremque qui rerum, ad animi ipsum eaque quibusdam, atque repellendus? Quos corrupti sed sapiente quibusdam. Similique quas assumenda sint!</p>
+    </div>
+    <div class="scroll">
+        <button>Scroll Down</button>
+    </div>
 </body>
 </html>
