fixed header and <p> width on wide screen. Still need to correctly position Scroll button at the bottom

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="hire">
+                <button>Hire Us</button>
+            </div>
         </nav>
-        <div class="hire">
-            <button>Hire Us</button>
-        </div>
     </header>
-    <div>
+    <main>
         <h1>chirpus inc.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, earum doloremque qui rerum, ad animi ipsum eaque quibusdam, atque repellendus? Quos corrupti sed sapiente quibusdam. Similique quas assumenda sint!</p>
-    </div>
-    <div class="scroll">
+    </main>
+    <div class="bottom">
         <button>Scroll Down</button>
     </div>
 </body>
