--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <main>
         <h1>chirpus inc.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error id, earum doloremque qui rerum, ad animi ipsum eaque quibusdam, atque repellendus? Quos corrupti sed sapiente quibusdam. Similique quas assumenda sint!</p>
+        <div class="shapes">
+            <div class="big"></div>
+            <div class="medium"></div>
+            <div class="small"></div>
+        </div>
     </main>
     <div class="bottom">
         <button>Scroll Down</button>
