Positioned Scroll Down button correctly.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <div class="medium"></div>
         <div class="small"></div>
     </div>
-    <div class="bottom">
-        <button>Scroll Down</button>
-    </div>
+    <footer>
+        <div class="bottom">
+            <button>Scroll Down</button>
+        </div>
+    </footer>
 </body>
 </html>
